# MdtApplication

./: .gitattributes  .gitignore  .gitlab-ci.yml  BUILD.md  CHANGELOG.md  CMakeGraphVizOptions.cmake  CMakeLists.txt  Catch2Main.cpp  Doxyfile.in  INSTALL.md  README.md  TODO.md  appveyor.yml  conanfile.py  sonar-project.properties
ci_cd/GitLab/: BuildAndTest_Linux.yml  BuildAndTest_Templates.yml  BuildAndTest_Windows.yml  Common.yml  ConanTemplates.yml  Conan_CreateAndTest.yml  Conan_CreateAndTest_Linux.yml  Conan_CreateAndTest_Windows.yml  Deploy_Conan.yml  Release.yml  SonarCloud.yml
doc/: CMakeLists.txt  Doxyfile-dev.in  Doxyfile.in
doc/dox/: CMakeDependencyGraph.dox  example_MyNonQtCoreLibrary.dox  example_MyNonQtGuiLibrary.dox  mainpage.dox
doc/plantuml/: MdtCoreApplicationForNonQtUsage_example.txt
dox/: example_MyNonQtCoreLibrary.dox  example_MyNonQtGuiLibrary.dox  mainpage.dox
examples/: CMakeLists.txt
examples/MyNonQtCoreLibrary/benchmarks/: CMakeLists.txt
examples/MyNonQtCoreLibrary/benchmarks/src/: MyLibraryBenchmark.cpp  MyLibraryBenchmark.h  MyLibrary_NonQtApi_Benchmark.cpp
examples/MyNonQtCoreLibrary/src/: CMakeLists.txt
examples/MyNonQtCoreLibrary/src/MyLibrary/: MyLibraryError.h  MyLibrary_Api.cpp  MyLibrary_Api.h  MyLibrary_NonQtApi.cpp  MyLibrary_NonQtApi.h  MyLibrary_NonQtApi_Worker.cpp  MyLibrary_NonQtApi_Worker.h
examples/MyNonQtCoreLibrary/tests/: CMakeLists.txt
examples/MyNonQtCoreLibrary/tests/src/: MyLibraryTest.cpp  MyLibraryTest.h  MyLibrary_NonQtApi_Test.cpp
examples/MyNonQtGuiLibrary/: CMakeLists.txt
examples/MyNonQtGuiLibrary/benchmarks/: CMakeLists.txt
examples/MyNonQtGuiLibrary/benchmarks/src/: MyNonQtGuiLibrary_Benchmark.cpp  MyNonQtGuiLibrary_Benchmark.h  MyNonQtGuiLibrary_NonQtApi_Benchmark.cpp
examples/MyNonQtGuiLibrary/src/: CMakeLists.txt
examples/MyNonQtGuiLibrary/src/MyNonQtGuiLibrary/: CreateReportError.h  MyLibrary_Api.cpp  MyLibrary_Api.h  MyLibrary_NonQtApi.cpp  MyLibrary_NonQtApi.h  MyLibrary_NonQtApi_Worker.cpp  MyLibrary_NonQtApi_Worker.h  ReportInformations.h
examples/MyNonQtGuiLibrary/tests/: CMakeLists.txt
examples/MyNonQtGuiLibrary/tests/src/: MyNonQtGuiLibrary_NonQtApi_ErrorTest.cpp  MyNonQtGuiLibrary_NonQtApi_Test.cpp
libs/CommandLineArguments/src/: CMakeLists.txt
libs/CommandLineArguments/src/Mdt/: CommandLineArguments.cpp  CommandLineArguments.h
libs/CommandLineArguments/tests/: CMakeLists.txt
libs/CommandLineArguments/tests/src/: CommandLineArgumentsTest.cpp
libs/ConsoleApplication/src/: CMakeLists.txt
libs/ConsoleApplication/src/Mdt/: AbstractConsoleApplicationMainFunction  AbstractConsoleApplicationMainFunction.cpp  AbstractConsoleApplicationMainFunction.h
libs/ConsoleApplication/tests/: CMakeLists.txt
libs/ConsoleApplication/tests/src/: ConsoleApplicationTestMainFunction.h
libs/CoreApplicationForNonQtUsage/: CMakeLists.txt
libs/CoreApplicationForNonQtUsage/src/: CMakeLists.txt
libs/CoreApplicationForNonQtUsage/src/Mdt/: CoreApplicationForNonQtUsage  CoreApplicationForNonQtUsage.cpp  CoreApplicationForNonQtUsage.h  CoreApplicationForNonQtUsageImpl.cpp  CoreApplicationForNonQtUsageImpl.h
libs/CoreApplicationForNonQtUsage/tests/: CMakeLists.txt
libs/CoreApplicationForNonQtUsage/tests/src/: CoreApplicationForNonQtUsageMainArgsTest.cpp  CoreApplicationForNonQtUsageTest.cpp  CoreApplicationForNonQtUsageTest.h
libs/GuiApplicationForNonQtUsage/src/: CMakeLists.txt
libs/GuiApplicationForNonQtUsage/src/Mdt/: GuiApplicationForNonQtUsage  GuiApplicationForNonQtUsage.cpp  GuiApplicationForNonQtUsage.h
libs/GuiApplicationForNonQtUsage/tests/src/: GuiApplicationForNonQtUsageTest.cpp
libs/Impl_ApplicationForNonQtUsage/src/: CMakeLists.txt
libs/Impl_ApplicationForNonQtUsage/src/Mdt/Impl/: ApplicationForNonQtUsage.cpp  ApplicationForNonQtUsage.h  ApplicationForNonQtUsageObject.cpp  ApplicationForNonQtUsageObject.h  CommandLineArguments.cpp  CommandLineArguments.h
libs/Impl_ApplicationForNonQtUsage/tests/: CMakeLists.txt
libs/Impl_ApplicationForNonQtUsage/tests/src/: Impl_ApplicationForNonQtUsageTest.cpp  Impl_CommandLineArgumentsTest.cpp
packaging/conan/: README.md
packaging/conan/CommandLineArguments/: conanfile.py
packaging/conan/CommandLineArguments/test_cmakedeps/: conanfile.py
packaging/conan/CommandLineArguments/test_package/: CMakeLists.txt  conanfile.py  main.cpp
packaging/conan/ConsoleApplication/: conanfile.py
packaging/conan/ConsoleApplication/test_cmakedeps/: conanfile.py
packaging/conan/ConsoleApplication/test_package/: CMakeLists.txt  ConsoleApplicationTestMainFunction.cpp  ConsoleApplicationTestMainFunction.h  conanfile.py  main.cpp
packaging/conan/CoreApplicationForNonQtUsage/: conanfile.py
packaging/conan/CoreApplicationForNonQtUsage/test_package/: CMakeLists.txt  conanfile.py
packaging/conan/GuiApplicationForNonQtUsage/: conanfile.py
packaging/conan/GuiApplicationForNonQtUsage/test_package/: CMakeLists.txt  conanfile.py  main.cpp
test_package/: CMakeLists.txt  ConsoleApplicationTest.cpp  ConsoleApplicationTestMainFunction.cpp  CoreApplicationForNonQtUsageTest.cpp  GuiApplicationForNonQtUsageTest.cpp  conanfile.py
